# yamg

./: .gitignore  Cargo.toml  LICENSE  README.md  movify.sh  summarize.sh  terrain.md
src/: erosion.rs  grid.rs  image.rs  main.rs  perlin.rs  render.rs  vector.rs
src/common/: mod.rs  sync.rs
