[package]
name = "yamg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.23.14"
rand = "^0.8.0"
rand_pcg = "^0.3.1"
rand_chacha = "^0.3.1"
vecmath = "^1"
rayon = "^1.5"
itertools = "^0.10.1"
prisma = "0.1.1"
angular-units = "0.2.4"
num = "0.4.0"

[profile.release]
debug = true